2013-03-11  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* math.test (math-12.1): [Bug 3606620]: Disabled debug output
	command lifting SafeBase error information into the test log.

2013-03-05  Arjen Markus <arjenmarkus@users.sourceforge.net>
	* decimal.tcl: Some rounding issues fixed (by Mark Alston)
	* pkgIndex.tcl: Bumped version of decimal package to 1.0.3

2013-02-08  Andreas Kupries  <andreask@activestate.com>

	* decimal.man: Fixed leading namespace qualifier in label.
	* symdiff.man: Fixed missing short package title.

2013-02-01  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.15 ========================
	*

2012-06-25  Arjen Markus <arjenmarkus@users.sourceforge.net>

	* statistics.tcl: Add procedures for Wilcoxon test and Spearman
	  rank correlation to the export list

2012-06-24  Arjen Markus <arjenmarkus@users.sourceforge.net>
	* decimal.man:     Correct documentation (namespace) for decimal package
	* statistics.tcl:  Add Wilcoxon test and Spearman rank correlation
	  Bumped version to 0.8
	* statistics.test: Add test cases for Wilcoxon test and Spearman rank correlation
	* statistics.man:  Describe procs for Wilcoxon test and Spearman rank correlation
	* wilcoxon.tcl:    Added this file - contains implementation of the new procs

2011-12-13  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.14 ========================
	*

2011-11-09  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* decimal.test: More fixes, now the test succeeds as
	  well. 'Simply' required the proper conversions for arguments and
	  results as most commands do not take regular numbers.

2011-11-07  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* decimal.test: Fixed the testsuite to be at least properly
	  executable, i.e. bad file names and broken Tcl syntax. The
	  single test still but that sahall be a problem for the actual
	  maintainer.
