@@ -188,6 +188,19 @@ test "Histogram-1.3" "Histogram - linear data 2" -match glob -body {
 } -result {1 1 8 0}
 
 #
+# Adding two dummy values should not influence the histogram (ticket 05d055c2f5)
+#
+test "Histogram-1.4" "Histogram - linear data 2 with weights" -match glob -body {
+  set values [::math::statistics::histogram {1.5 2.5 10.5} [concat $::data_linear 0.0 0.0] \
+      [concat [lrepeat [llength $::data_linear] 1] 0 0]]
+} -result {1 1 8 0}
+
+test "Histogram-1.5" "Histogram - linear data 2 with weights" -match glob -body {
+  set values [::math::statistics::histogram {1.5 2.5} [concat $::data_linear 0.0 0.0] \
+      [concat [lrepeat [llength $::data_linear] 1] 0 0]]
+} -result {1 1 8}
+
+#
 # Quantiles
 # Bug #1272910: related to rounding 0.5 - use different levels instead
 #               because another bug was fixed, return to the original
